domain-3-securing-workloads/assets/peer-auth-namespace.yaml
# Namespace-level PeerAuthentication policy
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: namespace-policy
  namespace: default
spec:
  mtls:
    mode: STRICT
