domain-3-securing-workloads/assets/peer-auth-strict-mtls.yaml
# Global strict mTLS policy
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
